--- a/.github/workflows/get_notion_props.yml
+++ b/.github/workflows/get_notion_props.yml
@@ -1,7 +1,7 @@
 name: Get Notion Properties
 
 on:
-  workflow_dispatch:  # 手動実行
+  workflow_dispatch:
 
 jobs:
   get-properties:
@@ -13,9 +13,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install requests
+      - name: Install dependencies
         run: pip install requests
 
       - name: Run script to get Notion properties
