--- a/.github/workflows/notion_insert.yml
+++ b/.github/workflows/notion_insert.yml
@@ -1,30 +1,34 @@
-name: Notion RSS Insert
+name: Notion Insert (Production)
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *" # 毎時0分に実行
+  workflow_dispatch:
 
 jobs:
-  insert-to-notion:
+  notion-insert-prod:
     runs-on: ubuntu-latest
+    env:
+      USE_MOCK: "false"
+      NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+      NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+      DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
+      RSS_URL: ${{ secrets.RSS_URL }}
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install feedparser requests python-dotenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install feedparser requests
 
       - name: Run Notion insert script
-        env:
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
-          RSS_URL: ${{ secrets.RSS_URL }}
-        run: python scripts/notion_insert.py
+        run: |
+          python scripts/notion_insert.py
