--- a/.github/workflows/notion_insert.yml
+++ b/.github/workflows/notion_insert.yml
@@ -2,7 +2,7 @@ name: Notion Insert (Production)
 
 on:
   schedule:
-    - cron: "0 * * * *" # 毎時0分に実行
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -16,19 +16,11 @@ jobs:
       RSS_URL: ${{ secrets.RSS_URL }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install feedparser requests
-
-      - name: Run Notion insert script
-        run: |
-          python scripts/notion_insert.py
+      - run: python scripts/notion_insert.py
