--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -8,25 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     env:
       USE_MOCK: "true"
-      NOTION_API_KEY: ""
-      NOTION_DATABASE_ID: ""
-      DEEPL_API_KEY: ""
+      NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+      NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+      DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
       RSS_URL: ${{ secrets.RSS_URL }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install feedparser requests
-
-      - name: Run Notion insert script in mock mode
-        run: |
-          python scripts/notion_insert.py
+      - run: python scripts/notion_insert.py
