--- a/.github/workflows/notion_insert.yml
+++ b/.github/workflows/notion_insert.yml
@@ -2,7 +2,7 @@ name: Notion Insert (Production)
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *"  # 毎時0分
   workflow_dispatch:
 
 jobs:
@@ -16,11 +16,13 @@ jobs:
       RSS_URL: ${{ secrets.RSS_URL }}
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: |
-          python -m pip install --upgrade pip
-          pip install feedparser requests
-      - run: python scripts/notion_insert.py
+      - name: Install dependencies
+        run: pip install feedparser requests
+      - name: Run Notion Insert
+        run: python scripts/notion_insert.py
