--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -18,11 +18,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: pip install feedparser requests
-      - name: Run Notion Insert
-        run: python scripts/notion_insert.py
+
+      - name: Run Notion Insert (Production)
+        run: |
+          export PYTHONPATH="${GITHUB_WORKSPACE}"
+          python scripts/notion_insert.py
