--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -7,6 +7,7 @@ jobs:
   notion-insert-mock:
     runs-on: ubuntu-latest
     env:
+      PYTHONPATH: ${{ github.workspace }}
       USE_MOCK: "true"
       RSS_URL: ${{ secrets.RSS_URL }}
       DEEPL_API_KEY: "dummy"
@@ -14,13 +15,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: pip install feedparser requests
-      - name: Set PYTHONPATH
-        run: export PYTHONPATH="${GITHUB_WORKSPACE}"
+
       - name: Run Notion Insert (Mock)
         run: python scripts/notion_insert.py
