--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -22,31 +22,14 @@ jobs:
       - name: Run Notion Insert Script (Mock)
         id: run_script
         run: |
-          set -e
-          python scripts/notion_insert.py || echo "failed" > result_status.txt
-
-      - name: Determine result status
-        id: check_status
-        run: |
-          if [ -f result_status.txt ]; then
+          set +e
+          python scripts/notion_insert.py > script_output.log 2>&1
+          exit_code=$?
+          echo "exit_code=$exit_code" >> $GITHUB_OUTPUT
+          if [ $exit_code -ne 0 ]; then
             echo "status=failed" >> $GITHUB_OUTPUT
+            # Slack用にエラー内容をBase64エンコード（改行対策）
+            error_msg=$(base64 -w0 script_output.log)
+            echo "error_message=$error_msg" >> $GITHUB_OUTPUT
           else
-            echo "status=success" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Send Slack Notification
-        if: always()
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            {
-              "text": "モックワークフロー実行結果: ${{ steps.check_status.outputs.status }}",
-              "attachments": [
-                {
-                  "color": "${{ steps.check_status.outputs.status == 'success' && 'good' || 'danger' }}",
-                  "text": "Notion登録（モック）が ${{ steps.check_status.outputs.status }} しました"
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+            echo "status=su
