--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          # 念のため jq を確実に用意（多くのランナーには入っていますが保険で）
           sudo apt-get update && sudo apt-get install -y jq
 
       - name: Run Notion Insert Script (Mock)
@@ -32,7 +31,6 @@ jobs:
 
           if [ $exit_code -ne 0 ]; then
             echo "status=failed" >> "$GITHUB_OUTPUT"
-            # ログ全文をJSON安全な文字列に（"..." の形：ダブルクオートや改行を全エスケープ）
             error_json=$(jq -Rs '.' < script_output.log)
             echo "error_json=$error_json" >> "$GITHUB_OUTPUT"
           else
@@ -41,16 +39,13 @@ jobs:
           fi
           set -e
 
-      - name: Prepare Slack Payload (safe JSON)
+      - name: Prepare Slack Payload
         id: prepare_slack
         shell: bash
         env:
           STATUS: ${{ steps.run_script.outputs.status }}
           ERROR_JSON: ${{ steps.run_script.outputs.error_json }}
         run: |
-          # STATUS は "success" または "failed"
-          # ERROR_JSON は "ログ全文" を表す JSON 文字列（例: "line1\nline2"）
-          # ここでSlackに渡す最終JSONを jq だけで生成（式展開は使わない）
           jq -n \
             --arg status "$STATUS" \
             --arg error_raw "$ERROR_JSON" '
@@ -70,12 +65,9 @@ jobs:
                 }
             ' > slack_payload.json
 
-          # 上記JSONを step の output（複数行）として渡す
-          {
-            echo 'payload<<EOF'
-            cat slack_payload.json
-            echo 'EOF'
-          } >> "$GITHUB_OUTPUT"
-
       - name: Send Slack Notification
         if: always()
+        run: |
+          cat slack_payload.json | slackapi/slack-github-action@v1.24.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
