--- a/.github/workflows/notion_insert_prod.yml
+++ b/.github/workflows/notion_insert_prod.yml
@@ -1,4 +1,4 @@
-name: Notion Insert
+name: Notion Insert prod
 
 on:
   workflow_dispatch:
@@ -20,17 +20,17 @@ jobs:
         run: |
           set -e
           python -m pip install --upgrade pip
-          python -m pip install feedparser deep-translator requests python-dotenv notion-client beautifulsoup4
+          python -m pip install feedparser deep-translator requests beautifulsoup4
           python - <<'PY'
           import sys, pkgutil
-          required = ["feedparser","deep_translator","requests","notion_client","bs4"]
+          required = ["feedparser","deep_translator","requests","bs4"]
           missing = [m for m in required if pkgutil.find_loader(m) is None]
           if missing:
               print("Missing modules:", ", ".join(missing), file=sys.stderr)
               sys.exit(1)
           PY
 
-      - name: Validate required secrets
+      - name: Validate required secrets for PRODUCTION
         env:
           _NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           _NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
@@ -77,3 +77,4 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
