--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -47,15 +47,8 @@ jobs:
           set -e
           BACKUP_DIR="local_backups/$(date +'%Y%m%d_%H%M%S')"
           mkdir -p "$BACKUP_DIR"
-          cp -R . "$BACKUP_DIR/"
+          rsync -av --exclude "local_backups" ./ "$BACKUP_DIR"/
           echo "✅ Backup completed at $BACKUP_DIR"
-
-      - name: Sync repository from GitHub to runner workspace
-        run: |
-          set -e
-          git fetch --all
-          git reset --hard origin/$(git rev-parse --abbrev-ref HEAD)
-          echo "✅ Repository synced with GitHub origin"
 
       - name: Run mock Notion insert
         env:
@@ -63,9 +56,9 @@ jobs:
           DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
         run: |
           set -e
-          echo "=== モック Notion 登録開始 ==="
+          echo "モックのNotion登録を実行中..."
           python scripts/notion_mock.py
-          echo "✅ Notion登録（モック）が成功しました"
+          echo "Notion登録（モック）が成功しました"
 
       - name: Send Slack notification (success)
         if: success()
